docs: replace Beetl references with FreeMarker